Update game description to include spelling practice
- Modify text in HomePage, server index, CLAUDE.md, and index.html to reflect that the game practices both sight and spelling words for clarity and consistency.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,7 @@
     <title>Word Guess Who</title>
     <meta
       name="description"
-      content="A two-player educational game for practicing sight words"
+      content="A two-player educational game for practicing sight & spelling words"
     />
     <link
       rel="icon"
